<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/super_quizz_title">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_play"
                android:icon="@drawable/ic_play_arrow_white_24dp"
                android:title="@string/play_quizz" />
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add_white_24dp"
                android:title="@string/add_question" />
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_list_white_24dp"
                android:title="@string/questions_list" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferences" />
        </menu>
    </item>


</menu>
