<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.QuestionActivity"
    tools:showIn="@layout/activity_question">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/question"
        android:textSize="30sp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:layout_above="@+id/grid_answer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grid_answer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:rowCount="2"
        android:columnCount="2">

        <Button
            style="@style/AnswerButtonStyle"
            android:text="@string/answer_1"
            android:id="@+id/answer_1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            style="@style/AnswerButtonStyle"
            android:id="@+id/answer_2"
            android:text="@string/answer_2"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            style="@style/AnswerButtonStyle"
            android:id="@+id/answer_3"
            android:text="@string/answer_3"
            android:layout_column="0"
            android:layout_row="1"/>

        <Button
            style="@style/AnswerButtonStyle"
            android:id="@+id/answer_4"
            android:text="@string/answer_4"
            android:layout_column="1"
            android:layout_row="1"/>

    </GridLayout>



</RelativeLayout>